# bleach-allowlist

./: .gitignore  README.rst  setup.cfg  setup.py
bleach_allowlist/: bleach_allowlist.py
