[metadata]
name = bleach-allowlist
version = 1.0.3
license = BSD License
description = Curated lists of tags and attributes for sanitizing html
long_description = file: README.rst
url = https://github.com/yourcelf/bleach-allowlist.git
author = Charlie DeTar
author_email = cfd@media.mit.edu
classifiers =
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
packages = bleach_allowlist
include_package_data = True

[bdist_wheel]
universal = 1
